services/cloud_test.yaml
# ------------------- CronJob ------------------- #
---
# ------------------- Test Job ------------------- #
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  labels:
    app: cloud-manual-test
  name: cloud-manual-test
spec:
  serviceName: cloud-manual-test
  # changing replicas value will require a manual etcdctl member remove/add
  # command (remove before decreasing and add after increasing)
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      name: cloud-manual-test
      labels:
        app: cloud-manual-test
    spec:
      restartPolicy: Always
      containers:
      - name: cloud-manual-test
        image: python
        imagePullPolicy: Always
        resources:
          requests:
            memory: "5Mi"
            cpu: "2m"
          limits:
            #memory: "128Mi"
            #cpu: "500m"
        workingDir: /root
        command:
        - /bin/sh
        - -c
        - |
          trap 'exit' INT TERM
          cp -av .sshro .ssh
          ssh-keyscan github.com > /root/.ssh/known_hosts
          git clone --recursive https://github.com/angelnu/homecloud.git

          echo "Install dependencies"
          pip install ansible jmespath
          apt update;apt install -y rsync

          echo "Infinite sleep"
          while [ 1 ]; do
            sleep 600 &
            wait $!
          done
        volumeMounts:
        - name: ssh-key-volume
          mountPath: "/root/.sshro"
      volumes:
      - name: ssh-key-volume
        secret:
          secretName: git-ssh-keys
          defaultMode: 0700
