services/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
  labels:
    app: test
spec:
  containers:
  - name: test
    image: alpine
    imagePullPolicy: Always
    command:
    - "/bin/sh"
    - "-c"
    - |
      trap 'exit' INT TERM
      while [ 1 ]; do
        sleep 600 &
        wait $!
      done
    resources:
      requests:
        memory: "2Mi"
        cpu: "1m"
      limits:
        #memory: "128Mi"
        #cpu: "500m"
    # env:
    # - name: nicName
    #   valueFrom:
    #     configMapKeyRef:
    #       # The ConfigMap containing the value you want to assign to SPECIAL_LEVEL_KEY
    #       name: host-nics
    #       # Specify the key associated with the value
    #       key: "n4.angelnu.com"
  #   ports:
  #   - containerPort: 22
  #   volumeMounts:
  #   - mountPath: /iobroker-data
  #     name: iobroker
  #   - mountPath: /ccu2
  #     name: ccu2
  #   - mountPath: /casa
  #     name: casa
  # volumes:
  #   - name: iobroker
  #     glusterfs:
  #       endpoints: glusterfs-storage
  #       path: iobroker
  #   - name: casa
  #     glusterfs:
  #       endpoints: glusterfs-storage
  #       path: casa
  #   - name: ccu2
  #     glusterfs:
  #       endpoints: glusterfs-storage
  #       path: ccu2
