services/traefik-etcd.yaml
apiVersion: v1
kind: Service
metadata:
  name: "etcd"
  namespace: kube-system
  annotations:
    # Create endpoints also if the related pod isn't ready
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  labels:
    app: etcd
spec:
  ports:
  - port: 2379
    name: client
  - port: 2380
    name: peer
  clusterIP: None
  selector:
    app: etcd
---
apiVersion: v1
kind: Service
metadata:
  name: "etcd-lb"
  namespace: kube-system
  labels:
    app: etcd
spec:
  ports:
  - port: 2379
    name: client
  selector:
    app: etcd
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  namespace: kube-system
  name: etcd
spec:
  serviceName: etcd
  # changing replicas value will require a manual etcdctl member remove/add
  # command (remove before decreasing and add after increasing)
  replicas: 3
  template:
    metadata:
      name: "etcd"
      labels:
        app: "etcd"
    spec:
      terminationGracePeriodSeconds: 2
      containers:
      - name: "etcd"
        #image: "quay.io/coreos/etcd:v3.2.3"
        image: gcr.io/google_containers/etcd-arm:3.1.10
        ports:
        - containerPort: 2379
          name: client
        - containerPort: 2380
          name: peer
        volumeMounts:
        - name: data
          mountPath: /var/run/etcd
        command:
          - "/bin/sh"
          - "-ecx"
          - |
            [...]
      volumes:
      - name: data
        emptyDir: {}
---
