services/ttrss-postgres.yaml
---
# ------------------- Deployment ------------------- #

apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: ttrss-postgres
spec:
  serviceName: ttrss-postgres
  # changing replicas value will require a manual etcdctl member remove/add
  # command (remove before decreasing and add after increasing)
  replicas: 1
  updateStrategy:
    type: OnDelete
  template:
    metadata:
      name: ttrss-postgres
      labels:
        app: ttrss-postgres
    spec:
      #NOTE: it is not possible to open an 32 bit created DB into a 64 bit OS.
      nodeSelector:
        beta.kubernetes.io/arch: arm
      containers:
      - name: ttrss-postgres
        image: postgres:alpine
        ports:
        - containerPort: 5432
        livenessProbe:
          tcpSocket:
            port: 5432
          initialDelaySeconds: 600 # 10 minutes
          timeoutSeconds: 10
          failureThreshold: 12 # 2 minutes
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: nfs-kubernetes
          subPath: ttrss/postgres
      volumes:
        - name: nfs-kubernetes
          persistentVolumeClaim:
            claimName: nfs-kubernetes

---
# -------------------- Service ------------------- #

kind: Service
apiVersion: v1
metadata:
  labels:
    app: ttrss-postgres
  name: ttrss-postgres
spec:
  ports:
  - name: db
    port: 5432
    targetPort: 5432
  selector:
    app: ttrss-postgres
