services/drone.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: drone
spec:
  serviceName: drone
  selector:
    matchLabels:
      app: drone
  replicas: 1
  template:
    metadata:
      name: drone
      labels:
        app: drone
    spec:
      containers:
      - name: drone
        image: drone/drone:1
        imagePullPolicy: Always
        ports:
          - containerPort: 80
          - containerPort: 443
        volumeMounts:
        - mountPath: /data
          name: nfs-kubernetes
          subPath: drone/data
      volumes:
        - name: nfs-kubernetes
          persistentVolumeClaim:
            claimName: nfs-kubernetes

---
# ------------------- DaemonSet ------------------- #
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: drone-agent
spec:
  template:
    metadata:
      name: drone-agent
      labels:
        app: drone-agent
    spec:
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
      - effect: NoSchedule
        key: dedicatedARM
        value: "true"
      containers:
      - name: drone
        image: drone/agent:1
        imagePullPolicy: Always
        volumeMounts:
        - name: dockersock
          mountPath: "/var/run/docker.sock"
      volumes:
      - name: dockersock
        hostPath:
          path: /var/run/docker.sock
---
# -------------------- Service ------------------- #

kind: Service
apiVersion: v1
metadata:
  labels:
    app: drone
  name: drone
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: tls
    port: 443
    targetPort: 443
  selector:
    app: drone
---

# ------------------- Ingress ------------------- #

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drone
spec:
  rules:
  - host: drone.angelnu.com
    http:
      paths:
      - path: /
        backend:
          serviceName: drone
          servicePort: 80
