services/gitea.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitea
spec:
  serviceName: gitea
  selector:
    matchLabels:
      app: gitea
  replicas: 1
  template:
    metadata:
      labels:
        app: gitea
    spec:
      nodeSelector:
        beta.kubernetes.io/arch: amd64
      # Initial rights settings when creating disk can be incorrect for the git user in the gitea container: Use init container to set the rights
      containers:
      - name: gitea
        image: "gitea/gitea:1"
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        - containerPort: 22
        volumeMounts:
        - name: gitea
          mountPath: "/data"
          subPath: gitea/data
        #- name: gitea-config
        #  mountPath: /data/gitea/conf
        resources:
          requests:
            cpu: 10m
            memory: 50Mi
          #limits:
          #  cpu: 1
          #  memory: 200Mi
      volumes:
      - name: gitea
        persistentVolumeClaim:
          claimName: nfs-kubernetes
      - name: gitea-config
        configMap:
          name: gitea-config

---
# -------------------- Service ------------------- #
apiVersion: v1
kind: Service
metadata:
  name: gitea-web
  labels:
    name: gitea-web
spec:
  ports:
    - name: gitea-web
      port: 80
      targetPort: 3000
  selector:
    name: gitea
  sessionAffinity: ClientIP
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-ssh
  labels:
    name: gitea-ssh
spec:
  ports:
    - name: gitea-ssh
      port: 2222
      targetPort: 22
  selector:
    name: gitea
  type: LoadBalancer
  loadBalancerIP: 192.168.2.230
  sessionAffinity: ClientIP
---

# ------------------- Ingress ------------------- #
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitea
  annotations:
spec:
  rules:
  - host: git.angelnu.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gitea-web
          servicePort: 80
      - backend:
          serviceName: gitea-ssh
          servicePort: 22
