services/heimdall.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: heimdall
spec:
  serviceName: heimdall
  selector:
    matchLabels:
      app: heimdall
  replicas: 1
  template:
    metadata:
      name: heimdall
      labels:
        app: heimdall
    spec:
      hostname: heimdall
      containers:
      - name: heimdall
        image: linuxserver/heimdall
        imagePullPolicy: Always
        resources:
          requests:
            memory: "155Mi"
            cpu: "10m"
          limits:
            #memory: "128Mi"
            #cpu: "500m"
        ports:
        - containerPort: 80
        - containerPort: 443
        livenessProbe:
          httpGet:
            port: 80
        volumeMounts:
        - mountPath: /config
          name: config
          subPath: heimdall/config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: nfs-kubernetes
---
# -------------------- Service ------------------- #

kind: Service
apiVersion: v1
metadata:
  labels:
    app: heimdall
  name: heimdall
spec:
  clusterIP: None
  ports:
  - name: http
    port: 443
    targetPort: 443
  selector:
    app: heimdall
---

# ------------------- Ingress ------------------- #

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: heimdall
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/whitelist-source-range: "192.168.2.0/16"
spec:
  rules:
  - host: home.angelnu.com
    http:
      paths:
      - path: /
        backend:
          serviceName: heimdall
          servicePort: 443
