services/musicIndex.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: music-index
spec:
  selector:
    matchLabels:
      app: music-index
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      name: music-index
      labels:
        app: music-index
    spec:
      hostname: music-index
      containers:
      - name: music-index
        image: angelnu/apache-musicindex:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "20Mi"
            cpu: "1m"
          limits:
            #memory: "128Mi"
            #cpu: "500m"
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - mountPath: /music
          name: music
        - mountPath: /cache
          name: cache
          subPath: music-index/cache
      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: nfs-kubernetes
        - name: music
          flexVolume:
            driver: "angelnu/cifs"
            secretRef:
              name: "cifs-secret"
            options:
              source: "//nas.home.angelnu.com/music"
              mountOptions: "dir_mode=0555,file_mode=0444,noperm"
---
# -------------------- Service ------------------- #

kind: Service
apiVersion: v1
metadata:
  labels:
    app: music-index
  name: music-index
spec:
  clusterIP: None
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: music-index
---

# ------------------- Ingress ------------------- #

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: music-index
  annotations:
    ingress.kubernetes.io/whitelist-source-range: "192.168.2.0/16,10.0.0.0/8"
spec:
  rules:
  - host: music.home.angelnu.com
    http:
      paths:
      - path: /
        backend:
          serviceName: music-index
          servicePort: http
