services/sonarr.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
spec:
  serviceName: sonarr
  selector:
    matchLabels:
      app: sonarr
  replicas: 1
  template:
    metadata:
      name: sonarr
      labels:
        app: sonarr
    spec:
      hostname: sonarr
      nodeSelector: #Only schedule in the big server
        kubernetes.io/hostname: server.home.angelnu.com
      containers:
      - name: sonarr
        image: linuxserver/sonarr:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "115Mi"
            cpu: "800m"
          limits:
            #memory: "128Mi"
            #cpu: "500m"
        ports:
        - containerPort: 8989
        livenessProbe:
          exec:
            command:
            - ping
            - -c1
            - -w15
            - google.com
          initialDelaySeconds: 60
          periodSeconds: 300
          failureThreshold: 2
        volumeMounts:
        - mountPath: /config
          name: config
          subPath: sonarr/config
        - mountPath: /downloads
          name: data
          subPath: downloaders/transmission
        - mountPath: /tv
          name: data
          subPath: 1_tv
        - mountPath: /videos
          name: videos
# VPN boiler-plate 1 (insert at the end of volumeMounts)
        - name: resolv
          mountPath: /etc/resolv_vpn.conf
          subPath: resolv.conf
      - name: vxlan
        image: angelnu/openvpn-helper
        imagePullPolicy: Always
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
        volumeMounts:
        - name: resolv
          mountPath: /etc_shared
# end of VPN boiler-plate 1
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: nfs-kubernetes
      - name: data
        flexVolume:
          driver: "angelnu/cifs"
          secretRef:
            name: "cifs-secret"
          options:
            source: "//nas.home.angelnu.com/downloads"
            mountOptions: "dir_mode=0775,file_mode=0664,noperm"
      - name: videos
        flexVolume:
          driver: "angelnu/cifs"
          secretRef:
            name: "cifs-secret"
          options:
            source: "//nas.home.angelnu.com/video"
            mountOptions: "dir_mode=0775,file_mode=0664,noperm"

# VPN boiler-plate 2 (append at the end of the volumes section)
      - name: resolv
        emptyDir: {}
---
# -------------------- Service ------------------- #

kind: Service
apiVersion: v1
metadata:
  labels:
    app: sonarr
  name: sonarr
spec:
  clusterIP: None
  ports:
  - name: http
    port: 80
    targetPort: 8989
  selector:
    app: sonarr
---

# ------------------- Ingress ------------------- #

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonarr
  annotations:
    ingress.kubernetes.io/whitelist-source-range: "192.168.2.0/16"
spec:
  rules:
  - host: tv.home.angelnu.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sonarr
          servicePort: http
