services/ttrss-postgres-check-pgadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ttrss-postgres-pgadmin
spec:
  selector:
    matchLabels:
      app: ttrss-postgres-pgadmin
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  template:
    metadata:
      name: ttrss-postgres-pgadmin
      labels:
        app: ttrss-postgres-pgadmin
    spec:
      #NOTE: only run on big servers
      nodeSelector:
        beta.kubernetes.io/arch: amd64
      containers:
      - name: ttrss-postgres-pgadmin
        image: dpage/pgadmin4
        imagePullPolicy: Always
        resources:
          requests:
            memory: "250Mi"
            cpu: "200m"
          limits:
            #memory: "128Mi"
            #cpu: "500m"
        ports:
        - containerPort: 80
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 60 # 1 minutes
          timeoutSeconds: 5
          failureThreshold: 6 # 30 seconds
        volumeMounts:
        - mountPath: /var/lib/pgadmin
          name: nfs-kubernetes
          subPath: ttrss/pgadmin
      volumes:
        - name: nfs-kubernetes
          persistentVolumeClaim:
            claimName: nfs-kubernetes

---
# -------------------- Service ------------------- #

kind: Service
apiVersion: v1
metadata:
  labels:
    app: ttrss-postgres-pgadmin
  name: ttrss-postgres-pgadmin
spec:
  ports:
  - name: db
    port: 80
    targetPort: 80
  selector:
    app: ttrss-postgres-pgadmin

---
# ------------------- Ingress ------------------- #

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ttrss-postgres-pgadmin
  annotations:
    ingress.kubernetes.io/whitelist-source-range: "192.168.2.0/16"
spec:
  rules:
  - host: pgadmin.k8s.angelnu.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ttrss-postgres-pgadmin
          servicePort: 80
