services/webdav.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdav
spec:
  selector:
    matchLabels:
      app: webdav
  replicas: 2
  strategy:
    type: RollingUpdate
  template:
    metadata:
      name: webdav
      labels:
        app: webdav
    spec:
      hostname: webdav
      nodeSelector: #TBD: use server name, not arch
        beta.kubernetes.io/arch: amd64
      containers:
      - name: heimdall
        image: angelnu/apache-webdav:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "20Mi"
            cpu: "100m"
          limits:
            #memory: "128Mi"
            #cpu: "500m"

        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - mountPath: /media
          name: media
      volumes:
      - name: media
        hostPath:
          path: "/media/data/webdav"
          type: Directory
---
# -------------------- Service ------------------- #

kind: Service
apiVersion: v1
metadata:
  labels:
    app: webdav
  name: webdav
spec:
  clusterIP: None
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: webdav
---

# ------------------- Ingress ------------------- #

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webdav
  annotations:
    ingress.kubernetes.io/whitelist-source-range: "192.168.2.0/16"
spec:
  rules:
  - host: webdav.home.angelnu.com
    http:
      paths:
      - path: /
        backend:
          serviceName: webdav
          servicePort: http
